--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.958.0",
+    "@aws-sdk/lib-storage": "^3.958.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -26,6 +28,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
